feat: Add support to create iceberg v3 table using create-table (#214)